[project]
name = "ascii-portscan"
version = "0.1.0"
description = "ASCII curses TCP port scanner"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "wetair1" }]
keywords = ["ascii", "curses", "terminal", "tui", "network", "ports"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Environment :: Console :: Curses",
  "Operating System :: POSIX :: Linux",
]
dependencies = []

[tool.ascii-portscan]
entrypoint = "main.py"
stdlib_only = true
